--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "fuckitup.js",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --config webpack.config.js --watch "
+    "start": "webpack --config webpack.config.js --watch"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/romanran/fuckitup.js#readme",
   "dependencies": {
     "lodash": "^4.17.10",
-    "zepto": "^1.2.0"
+    "umbrellajs": "^2.10.3"
   },
   "devDependencies": {
     "babel-env": "^2.4.1",
@@ -29,6 +29,7 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.1",
     "webpack": "^4.16.3",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-notifier": "^1.6.0"
   }
 }
