--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/romanran/fuckitup.js#readme",
   "dependencies": {
     "lodash": "^4.17.10",
+    "node-pid-controller": "^1.0.1",
     "umbrellajs": "^2.10.3"
   },
   "devDependencies": {
