--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "import-glob": "^1.5.0",
     "less": "^3.8.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.1",
